--- a/android/build.gradle
+++ b/android/build.gradle
@@ -9,10 +9,12 @@ buildscript {
         supportLibVersion = "28.0.0"
     }
     repositories {
+        maven { url 'https://plugins.gradle.org/m2/' } // Gradle Plugin Portal 
         google()
         jcenter()
     }
     dependencies {
+        classpath 'gradle.plugin.com.onesignal:onesignal-gradle-plugin:[0.12.1, 0.99.99]'
         classpath("com.android.tools.build:gradle:3.4.1")
 
         // NOTE: Do not place your application dependencies here; they belong
