--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -19,3 +19,7 @@
 
 android.useAndroidX=true
 android.enableJetifier=true
+MYAPP_UPLOAD_STORE_FILE=my-upload-key.keystore
+MYAPP_UPLOAD_KEY_ALIAS=wms-inventario
+MYAPP_UPLOAD_STORE_PASSWORD=gaspar15
+MYAPP_UPLOAD_KEY_PASSWORD=gaspar15
