--- a/package.json
+++ b/package.json
@@ -9,21 +9,30 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.6.1",
+    "@react-native-firebase/app": "^0.3.0",
+    "@react-native-firebase/ml-vision": "^0.3.0",
     "axios": "^0.19.0",
     "react": "16.8.6",
     "react-native": "0.60.5",
+    "react-native-barcode-scanner-google": "^1.4.2",
     "react-native-gesture-handler": "^1.3.0",
+    "react-native-onesignal": "^3.3.2",
+    "react-native-permissions": "^1.2.0",
+    "react-native-picker-select": "^6.3.2",
     "react-native-reanimated": "^1.2.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^3.11.1",
-    "socket.io-client": "^2.2.0"
+    "socket.io-client": "^2.2.0",
+    "styled-components": "^4.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
     "@babel/runtime": "^7.5.5",
     "@react-native-community/eslint-config": "^0.0.5",
     "babel-jest": "^24.9.0",
-    "eslint": "^6.2.1",
+    "eslint": "^6.3.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.18.2",
     "jest": "^24.9.0",
     "json-server": "^0.15.0",
     "metro-react-native-babel-preset": "^0.56.0",
