--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "16.8.6",
     "react-native": "0.60.5",
     "react-native-barcode-scanner-google": "^1.4.2",
+    "react-native-firebase-mlkit": "^0.6.2",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-onesignal": "^3.3.2",
     "react-native-permissions": "^1.2.0",
