--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -19,6 +19,8 @@
 
 android.useAndroidX=true
 android.enableJetifier=true
+# android.useDeprecatedNdk=true
+# android.enableAapt2=false
 MYAPP_UPLOAD_STORE_FILE=my-upload-key.keystore
 MYAPP_UPLOAD_KEY_ALIAS=wms-inventario
 MYAPP_UPLOAD_STORE_PASSWORD=gaspar15
