--- a/android/build.gradle
+++ b/android/build.gradle
@@ -7,6 +7,14 @@ buildscript {
         compileSdkVersion = 28
         targetSdkVersion = 28
         supportLibVersion = "28.0.0"
+
+        // buildToolsVersion           = "28.0.3"
+        // minSdkVersion = 16 //21
+        // compileSdkVersion           = 28
+        // targetSdkVersion            = 28
+        // supportLibVersion           = "27.1.0"
+        googlePlayServicesVersion   = "12.0.1"
+        googlePlayServicesVisionVersion = "15.0.2"
     }
     repositories {
         maven { url 'https://plugins.gradle.org/m2/' } // Gradle Plugin Portal 
@@ -14,6 +22,7 @@ buildscript {
         jcenter()
     }
     dependencies {
+        classpath 'com.google.gms:google-services:4.0.1'
         classpath 'gradle.plugin.com.onesignal:onesignal-gradle-plugin:[0.12.1, 0.99.99]'
         classpath("com.android.tools.build:gradle:3.4.1")
 
@@ -25,6 +34,9 @@ buildscript {
 allprojects {
     repositories {
         mavenLocal()
+        jcenter()
+        maven { url "https://maven.google.com" }
+        maven { url "https://jitpack.io" }
         maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
             url("$rootDir/../node_modules/react-native/android")
@@ -35,6 +47,25 @@ allprojects {
         }
 
         google()
-        jcenter()
+    }
+}
+
+subprojects {
+    project.configurations.all {
+        resolutionStrategy.eachDependency { details ->
+            if (details.requested.group == 'com.android.support'
+              && !details.requested.name.contains('multidex') ) {
+                details.useVersion "26.0.2"
+            }
+        }
+    }
+
+    afterEvaluate {
+        project -> if (project.hasProperty("android")) {
+            android {
+                compileSdkVersion 26
+                buildToolsVersion '26.0.2'
+            }
+        }
     }
 }
