--- a/package.json
+++ b/package.json
@@ -10,12 +10,11 @@
   "dependencies": {
     "@react-native-community/async-storage": "^1.6.1",
     "@react-native-firebase/app": "^0.3.0",
-    "@react-native-firebase/ml-vision": "^0.3.0",
     "axios": "^0.19.0",
     "react": "16.8.6",
     "react-native": "0.60.5",
     "react-native-barcode-scanner-google": "^1.4.2",
-    "react-native-firebase-mlkit": "^0.6.2",
+    "react-native-camera": "git+https://git@github.com/react-native-community/react-native-camera.git",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-onesignal": "^3.3.2",
     "react-native-permissions": "^1.2.0",
