--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -95,7 +95,7 @@ def enableSeparateBuildPerCPUArchitecture = true
 /**
  * Run Proguard to shrink the Java bytecode in release builds.
  */
-def enableProguardInReleaseBuilds = true
+def enableProguardInReleaseBuilds = false
 
 /**
  * The preferred build flavor of JavaScriptCore.
@@ -127,6 +127,10 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
+    dexOptions {
+        javaMaxHeapSize "4g"
+    }
+    
     defaultConfig {
         missingDimensionStrategy 'react-native-camera', 'mlkit'
         applicationId "com.wms_inventario"
@@ -134,6 +138,8 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
+        // Enabling multidex support.
+        multiDexEnabled true
     }
     splits {
         abi {
@@ -197,7 +203,15 @@ android {
 }
 
 dependencies {
-    implementation project(':react-native-camera')
+    implementation 'com.android.support:multidex:1.0.3'
+    // implementation project(':react-native-camera')
+    implementation (project(':react-native-camera')) {
+        exclude group: "com.google.android.gms"
+        implementation 'com.android.support:exifinterface:27.+'
+        implementation ('com.google.android.gms:play-services-vision:17.0.2') {
+            force = true
+        }
+    }
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'com.android.support:appcompat-v7:26.0.1'
     implementation "com.facebook.react:react-native:+"  // From node_modules
